tests/fixtures/invalid/union_pointer_to_pointer_field.c
union Node {
    int value;
    union Node **next;
};

int main(void) {
    union Node node = {1};
    return node.value;
}
